remove images, change domain

--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 # DB_CONNECTION_URL = "mongodb://127.0.0.1:27017/try07"
-DOMAIN = "http://neon-blog-mernstack.vercel.app"
+DOMAIN = "https://neon-blog-mernstack.vercel.app"
 
 # DB_CONNECTION_URL = "mongodb+srv://mustafa-dev:I83Q5gySMmmE3Vc3@neon-blog-cluster.awcqdbt.mongodb.net/"
 MONGODB_URI = "mongodb+srv://mustafa-dev:<I83Q5gySMmmE3Vc3>@neon-blog-cluster.awcqdbt.mongodb.net/?retryWrites=true&w=majority&appName=neon-blog-Cluster"
